# gps_trust

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  ublox_dgnss
config/: gpstrust.env.example  gpstrust.service.example  reliability_override.yaml
gps_trust/: CMakeLists.txt  package.xml
gps_trust/launch/: gps_trust.launch.py  ublox_gt_hpposllh_satellite.launch.py  ublox_gt_hpposllh_satellite_x20p.launch.py
gps_trust_msgs/: CMakeLists.txt  package.xml
gps_trust_msgs/msg/: GPSTrustIndicator.msg
gps_trust_node/: CMakeLists.txt  package.xml
gps_trust_node/include/gps_trust_node/: node_params.hpp  visibility_control.h
gps_trust_node/src/: gps_trust_node.cpp
scripts/: gpstrust.sh
setup/: install_gpstrust_service.sh
