<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gps_trust_msgs</name>
  <version>0.0.1</version>
  <description>Contains the trust status of the gps device</description>
  <maintainer email="nick@aussierobots.com.au">nick</maintainer>
  <license>Apache License, Version 2.0</license>

  <url>https://github.com/aussierobots/gps_trust</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>rosidl_default_generators</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
