<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gps_trust_node</name>
  <version>0.0.1</version>
  <description>Interacts with the GPS trust api to gain the trust level of the GPS device</description>
  <maintainer email="nick@aussierobots.com.au">nick</maintainer>
  <license>Apache License, Version 2.0</license>

  <url>https://github.com/aussierobots/gps_trust</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>ublox_ubx_msgs</depend>
  <depend>rtcm_msgs</depend>
  <depend>gps_trust_msgs</depend>
  <build_depend>pkg-config</build_depend>
  <build_depend>libjsoncpp</build_depend>
  <exec_depend>libjsoncpp</exec_depend>
  <depend>libcurl_vendor</depend>
  <depend>zlib</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
